--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
           </li>
         </ul>
       </nav>
-      <h2>Creative Template</h2>
+      <h5>Creative Template</h5>
       <h1>
         WELCOME <br />
         TO MOGO
       </h1>
-      <img class="line" src="./images/line_empty.png" alt="line" />
+
       <input type="button" value="LEARN MORE" />
 
       <nav>
@@ -233,7 +233,7 @@
         </p>
         <div class="creativity">
           <div class="left">
-            <img class="wall" src="./images/photography.jpg" alt="white wall" />
+            <!-- <img class="wall" src="./images/photography.jpg" alt="white wall" /> -->
           </div>
           <div class="right">
             <div>
@@ -245,7 +245,7 @@
                 ><img src="./images/arrow_up.png" alt="arrow_down"
               /></a>
             </div>
-            <div>
+            <div class="custom-scroll">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
                 inventore adipisci voluptatem temporibus beatae amet orro ipsam
@@ -257,9 +257,12 @@
                 consectetur adipisicing elit. Tenetur inventore adipisci
                 voluptatem temporibus beatae amet orro ipsam explicabo
                 provident. Quas commodi consequatur deleniti ullam earum neque a
-                voluptatum quo vel amet. Quas commodi consequatur
+                voluptatum quo vel amet. Quas commodi consequatur voluptatem
+                temporibus beatae amet orro ipsam explicabo provident. Quas
+                commodi consequatur deleniti ullam earum neque a voluptatum quo
+                vel amet. Quas commodi consequatur
               </p>
-              <a href="#"><img src="./images/scroll.png" alt="scroll" /></a>
+              <!-- <a href="#"><img src="./images/scroll.png" alt="scroll" /></a> -->
             </div>
             <div>
               <a href="#"
@@ -284,28 +287,24 @@
 
     <section class="slides">
       <div class="wrapper">
-        <div id="left-arrow">
-          <a href=""><img src="./images/arrow_down.png" alt="arrow" /></a>
+        <a href="" class="first">
+          <img src="./images/arrow_down.png" alt="arrow" />
+        </a>
+        <div class="second">
+          <img class="chat-border" src="./images/chat.png" alt="chat" />
         </div>
-        <div class="center">
-          <div>
-            <img class="chat-border" src="./images/chat.png" alt="chat" />
-          </div>
-          <div>
-            <p>
-              "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              erim ad minim venima, quis nostrum exercitation."
-            </p>
-            <div class="first">
-              <img class="line-red" src="./images/line_empty.png" alt="line" />
-              <h5>Jon Doe</h5>
-            </div>
-          </div>
+        <div class="third">
+          <p>
+            "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut erim
+            ad minim venima, quis nostrum exercitation."
+          </p>
+          <h5>Jon Doe</h5>
         </div>
-        <div id="right-arrow">
-          <a href=""><img src="./images/arrow_down.png" alt="arrow" /></a>
-        </div>
+
+        <a href="" class="fourth">
+          <img src="./images/arrow_down.png" alt="arrow" />
+        </a>
       </div>
     </section>
 
@@ -385,7 +384,6 @@
           </div> -->
         </a>
         <a href="">
-          
           <!-- <div class="overlay">
             <img src="./images/photography.png" alt="photography" />
             <h3>CREATIVELY DESIGNED</h3>
@@ -580,7 +578,8 @@
     </section>
 
     <section class="map">
-      <a href="#"><img class="location" src="./images/location.png" alt="location" />
+      <a href="#"
+        ><img class="location" src="./images/location.png" alt="location" />
         <p>OPEN MAP</p>
       </a>
     </section>
@@ -590,90 +589,88 @@
           <a href="">
             <h2>MoGo</h2>
           </a>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-            Est at corporis aspernatur sapiente eos dolor modi,
-            delectus quam perspiciatis hic aliquam quibusdam sequi 
-            distinctio dolorem reiciendis vel voluptatum cum
-            explicabo.
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est at
+            corporis aspernatur sapiente eos dolor modi, delectus quam
+            perspiciatis hic aliquam quibusdam sequi distinctio dolorem
+            reiciendis vel voluptatum cum explicabo.
           </p>
-  
+
           <a href="#">
             <h3>15k <span> followers</span></h3>
           </a>
           <div>
             <div>
               <h4>Follow Us:</h4>
-              <a href="#"><img src="images/facebook.png" alt="facebook"></a>
-              <a href="#"><img src="images/twitter.png" alt="twitter"></a>
-              <a href="#"><img src="images/instagram.png" alt="instagram"></a>
-              <a href="#"><img src="images/pinterest.png" alt="pinterest"></a>
-              <a href="#"><img src="images/google plus.png" alt="google plus"></a>
-              <a href="#"><img src="images/youtube.png" alt="youtube"></a>
-              <a href="#"><img src="images/dribbble.png" alt="dribble"></a>
-              <a href="#"><img src="images/tumblr.png" alt="tumblr"></a>
+              <a href="#"><img src="images/facebook.png" alt="facebook" /></a>
+              <a href="#"><img src="images/twitter.png" alt="twitter" /></a>
+              <a href="#"><img src="images/instagram.png" alt="instagram" /></a>
+              <a href="#"><img src="images/pinterest.png" alt="pinterest" /></a>
+              <a href="#"
+                ><img src="images/google plus.png" alt="google plus"
+              /></a>
+              <a href="#"><img src="images/youtube.png" alt="youtube" /></a>
+              <a href="#"><img src="images/dribbble.png" alt="dribble" /></a>
+              <a href="#"><img src="images/tumblr.png" alt="tumblr" /></a>
             </div>
-  
+
             <div>
               <form>
-                <input type="text" value="" placeholder="Your Email...">
+                <input type="text" value="" placeholder="Your Email..." />
                 <button>SUBSCRIBE</button>
               </form>
             </div>
           </div>
         </div>
         <div class="center">
-            <h2>BLOGS</h2>
+          <h2>BLOGS</h2>
           <a href="#">
-            <img src="images/blog_1.jpg" alt="">
+            <img src="images/blog_1.jpg" alt="" />
             <div>
-              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing. </h3>
+              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
               <p>Jan 9, 2016</p>
             </div>
           </a>
           <a>
-            <img src="images/blog_2.jpg" alt="">
+            <img src="images/blog_2.jpg" alt="" />
             <div>
-              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing. </h3>
+              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
               <p>Jan 9, 2016</p>
             </div>
-  
           </a>
           <a>
-            <img src="images/blog_3.jpg" alt="">
+            <img src="images/blog_3.jpg" alt="" />
             <div>
-              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing. </h3>
+              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
               <p>Jan 9, 2016</p>
             </div>
-  
           </a>
         </div>
-  
+
         <div class="right">
           <a href="#">
             <h3>INSTAGRAM</h3>
           </a>
           <div>
-            <a href="#"><img src="images/photos-1.jpg" alt=""></a>
-            <a href=""><img src="images/photos-2.jpg" alt=""></a>
-            <a href=""><img src="images/photos-3.jpg" alt=""></a>
-            <a href=""><img src="images/photos-4.jpg" alt=""></a>
-            <a href=""><img src="images/photos-5.jpg" alt=""></a>
-            <a href=""><img src="images/photos-6.jpg" alt=""></a>
-            <a href=""><img src="images/photos-7.jpg" alt=""></a>
-            <a href=""><img src="images/photos-8.jpg" alt=""></a>
-            <a href=""><img src="images/photos-9.jpg" alt=""></a>
+            <a href="#"><img src="images/photos-1.jpg" alt="" /></a>
+            <a href=""><img src="images/photos-2.jpg" alt="" /></a>
+            <a href=""><img src="images/photos-3.jpg" alt="" /></a>
+            <a href=""><img src="images/photos-4.jpg" alt="" /></a>
+            <a href=""><img src="images/photos-5.jpg" alt="" /></a>
+            <a href=""><img src="images/photos-6.jpg" alt="" /></a>
+            <a href=""><img src="images/photos-7.jpg" alt="" /></a>
+            <a href=""><img src="images/photos-8.jpg" alt="" /></a>
+            <a href=""><img src="images/photos-9.jpg" alt="" /></a>
           </div>
           <a href="">
             <h4>View more photos</h4>
           </a>
-  
         </div>
-  
-      
-      <div class="bottom">
-        <p>&copy 2016 MoGo free PSD template by <span>Laaqiq</span></p>
+
+        <div class="bottom">
+          <p>&copy 2016 MoGo free PSD template by <span>Laaqiq</span></p>
+        </div>
       </div>
-    </div>
     </footer>
   </body>
 </html>
