--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <div class="wrapper">
         <h5>We work width</h5>
         <h2>AMAZING SERVICES</h2>
-        <div>
+        <div class="first">
           <div>
             <div class="small-icon">
               <img src="./images/alarm.png" alt="alarm-clock" />
@@ -171,7 +171,7 @@
           </div>
         </div>
         <div class="horizontal-line"></div>
-        <div>
+        <div class="second">
           <div>
             <div class="small-icon">
               <img src="./images/book_seo.png" alt="book_seo" />
@@ -232,9 +232,7 @@
           in eum repellendus possimus nam! Corporis voluptatum numquam!
         </p>
         <div class="creativity">
-          <div class="left">
-            <!-- <img class="wall" src="./images/photography.jpg" alt="white wall" /> -->
-          </div>
+          <div class="left"></div>
           <div class="right">
             <div>
               <a href="#"
@@ -262,7 +260,6 @@
                 commodi consequatur deleniti ullam earum neque a voluptatum quo
                 vel amet. Quas commodi consequatur
               </p>
-              <!-- <a href="#"><img src="./images/scroll.png" alt="scroll" /></a> -->
             </div>
             <div>
               <a href="#"
@@ -375,32 +372,70 @@
 
     <section class="wallpaper">
       <div class="first">
-        <a href="#">
-          <!-- <img src="./images/surf.jpg" alt="surf"> -->
-          <!-- <div class="overlay">
-            <img src="./images/photography.png" alt="photography" />
-            <h3>CREATIVELY DESIGNED</h3>
-            <p>Lorem ipsum dolor sit</p>
-          </div> -->
-        </a>
-        <a href="">
-          <!-- <div class="overlay">
-            <img src="./images/photography.png" alt="photography" />
-            <h3>CREATIVELY DESIGNED</h3>
-            <p>Lorem ipsum dolor sit</p>
-          </div> -->
-        </a>
+        <div class="left">
+          <div class="top">
+            <img src="./images/surf.jpg" alt="surf" />
+            <div class="overlay">
+              <img src="./images/creatively.png" alt="photography" />
+              <h3>CREATIVELY DESIGNED</h3>
+              <h2>Lorem ipsum dolor sit</h2>
+            </div>
+          </div>
+          <div class="bottom">
+            <img src="./images/bridge.jpg" alt="bridge" />
+            <div class="overlay">
+              <img src="./images/creatively.png" alt="photography" />
+              <h3>CREATIVELY DESIGNED</h3>
+              <h2>Lorem ipsum dolor sit</h2>
+            </div>
+          </div>
+        </div>
+        <div class="right">
+          <div class="top">
+            <img src="./images/architecture.jpg" alt="architecture" />
+            <div class="overlay">
+              <img src="./images/creatively.png" alt="photography" />
+              <h3>CREATIVELY DESIGNED</h3>
+              <h2>Lorem ipsum dolor sit</h2>
+            </div>
+          </div>
+          <div class="bottom">
+            <img src="./images/architecture_2.jpg" alt="architecture_2" />
+            <div class="overlay">
+              <img src="./images/creatively.png" alt="photography" />
+              <h3>CREATIVELY DESIGNED</h3>
+              <h2>Lorem ipsum dolor sit</h2>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="second">
-        <a href="#"></a>
-        <a href="#"></a>
-      </div>
-      <div class="third">
-        <a href="#"></a>
-      </div>
-      <div class="fourth">
-        <a href="#"></a>
-        <a href="#"></a>
+        <div class="left-big">
+          <img src="./images/sea.jpg" alt="sea" />
+          <div class="overlay">
+            <img src="./images/creatively.png" alt="photography" />
+            <h3>CREATIVELY DESIGNED</h3>
+            <h2>Lorem ipsum dolor sit</h2>
+          </div>
+        </div>
+        <div class="right">
+          <div class="top">
+            <img src="./images/arcitecture_4.jpg" alt="architecture_4" />
+            <div class="overlay">
+              <img src="./images/creatively.png" alt="photography" />
+              <h3>CREATIVELY DESIGNED</h3>
+              <h2>Lorem ipsum dolor sit</h2>
+            </div>
+          </div>
+          <div class="bottom">
+            <img src="./images/architecture_3.jpg" alt="arcitecture_3" />
+            <div class="overlay">
+              <img src="./images/creatively.png" alt="photography" />
+              <h3>CREATIVELY DESIGNED</h3>
+              <h2>Lorem ipsum dolor sit</h2>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -648,23 +683,25 @@
         </div>
 
         <div class="right">
-          <a href="#">
-            <h3>INSTAGRAM</h3>
-          </a>
-          <div>
-            <a href="#"><img src="images/photos-1.jpg" alt="" /></a>
-            <a href=""><img src="images/photos-2.jpg" alt="" /></a>
-            <a href=""><img src="images/photos-3.jpg" alt="" /></a>
-            <a href=""><img src="images/photos-4.jpg" alt="" /></a>
-            <a href=""><img src="images/photos-5.jpg" alt="" /></a>
-            <a href=""><img src="images/photos-6.jpg" alt="" /></a>
-            <a href=""><img src="images/photos-7.jpg" alt="" /></a>
-            <a href=""><img src="images/photos-8.jpg" alt="" /></a>
-            <a href=""><img src="images/photos-9.jpg" alt="" /></a>
+          <div class="vieta">
+            <a href="#">
+              <h3>INSTAGRAM</h3>
+            </a>
+            <div class="picture">
+              <a href="#"><img src="images/photos-1.jpg" alt="" /></a>
+              <a href=""><img src="images/photos-2.jpg" alt="" /></a>
+              <a href=""><img src="images/photos-3.jpg" alt="" /></a>
+              <a href=""><img src="images/photos-4.jpg" alt="" /></a>
+              <a href=""><img src="images/photos-5.jpg" alt="" /></a>
+              <a href=""><img src="images/photos-6.jpg" alt="" /></a>
+              <a href=""><img src="images/photos-7.jpg" alt="" /></a>
+              <a href=""><img src="images/photos-8.jpg" alt="" /></a>
+              <a href=""><img src="images/photos-9.jpg" alt="" /></a>
+            </div>
+            <a href="">
+              <h4>View more photos</h4>
+            </a>
           </div>
-          <a href="">
-            <h4>View more photos</h4>
-          </a>
         </div>
 
         <div class="bottom">
