--- a/index.html
+++ b/index.html
@@ -354,7 +354,14 @@
 
     <section class="logos">
       <div class="wrapper">
-        <img src="./images/logos.png" alt="logos" />
+        <div class="logo-images">
+        <img src="./images/logo1.png" alt="logo" />
+        <img src="./images/logo2.png" alt="logo" />
+        <img src="./images/logo3.png" alt="logo" />
+        <img src="./images/logo4.png" alt="logo" />
+        <img src="./images/logo5.png" alt="logo" />
+        <img src="./images/logo6.png" alt="logo" />
+      </div>
       </div>
     </section>
 
@@ -374,19 +381,24 @@
       <div class="first">
         <div class="left">
           <div class="top">
+            <!-- <div class="surf-image"></div> -->
             <img src="./images/surf.jpg" alt="surf" />
             <div class="overlay">
               <img src="./images/creatively.png" alt="photography" />
+              <div class="text">
               <h3>CREATIVELY DESIGNED</h3>
               <h2>Lorem ipsum dolor sit</h2>
+            </div>
             </div>
           </div>
           <div class="bottom">
             <img src="./images/bridge.jpg" alt="bridge" />
             <div class="overlay">
               <img src="./images/creatively.png" alt="photography" />
+              <div class="text">
               <h3>CREATIVELY DESIGNED</h3>
               <h2>Lorem ipsum dolor sit</h2>
+            </div>
             </div>
           </div>
         </div>
@@ -394,28 +406,36 @@
           <div class="top">
             <img src="./images/architecture.jpg" alt="architecture" />
             <div class="overlay">
+              
               <img src="./images/creatively.png" alt="photography" />
+              <div class="text">
               <h3>CREATIVELY DESIGNED</h3>
               <h2>Lorem ipsum dolor sit</h2>
+            </div>
             </div>
           </div>
           <div class="bottom">
             <img src="./images/architecture_2.jpg" alt="architecture_2" />
             <div class="overlay">
               <img src="./images/creatively.png" alt="photography" />
+              <div class="text">
               <h3>CREATIVELY DESIGNED</h3>
               <h2>Lorem ipsum dolor sit</h2>
+            </div>
             </div>
           </div>
         </div>
       </div>
       <div class="second">
         <div class="left-big">
+          <!-- <div class="big-image"></div> -->
           <img src="./images/sea.jpg" alt="sea" />
           <div class="overlay">
             <img src="./images/creatively.png" alt="photography" />
+            <div class="text">
             <h3>CREATIVELY DESIGNED</h3>
             <h2>Lorem ipsum dolor sit</h2>
+          </div>
           </div>
         </div>
         <div class="right">
@@ -423,16 +443,20 @@
             <img src="./images/arcitecture_4.jpg" alt="architecture_4" />
             <div class="overlay">
               <img src="./images/creatively.png" alt="photography" />
+              <div class="text">
               <h3>CREATIVELY DESIGNED</h3>
               <h2>Lorem ipsum dolor sit</h2>
+            </div>
             </div>
           </div>
           <div class="bottom">
             <img src="./images/architecture_3.jpg" alt="arcitecture_3" />
             <div class="overlay">
               <img src="./images/creatively.png" alt="photography" />
+              <div class="text">
               <h3>CREATIVELY DESIGNED</h3>
               <h2>Lorem ipsum dolor sit</h2>
+            </div>
             </div>
           </div>
         </div>
