--- a/index.html
+++ b/index.html
@@ -315,39 +315,121 @@
           in eum repellendus possimus nam! Corporis voluptatum numquam!
         </p>
         <div class="team">
-          <a href="#" class="left">
+          <div class="left">
             <div class="member">
               <img src="./images/matthew_dix.jpg" alt="matthew_dix" />
-              <div>
-                <img src="images/share.png" alt="share" />
+              <div class="what">
+                <div class="container">
+                  <button>
+                    <img src="./images/facebook-white.png" alt="facebook" />
+                    <img class="top-img"src="./images/facebook-white.png" alt="facebook" />
+                  </button>
+                  <button>
+                    <img src="./images/twitter-pink.png" alt="twitter" />
+                    <img class="top-img" src="./images/twitter-white.png" alt="twitter" />
+                  </button>
+                  <button>
+                    <img src="./images/pinterest-pink.png" alt="pinterest" />
+                    <img class="top-img" src="./images/pinterest-white.png" alt="pinterest" />
+                  </button>
+                  <button>
+                    <img src="./images/instagram-pink.png" alt="instagram" />
+                    <img class="top-img" src="./images/instagram-white.png" alt="instagram" />
+                  </button>
+                </div>
               </div>
+              <!-- <div class="hover-on-hover">
+                <button class="red-button">
+                <img src="./images/facebook-white.png" alt="facebook" />
+              </button>
+              <button class="red-button">
+                <img src="./images/twitter-white.png" alt="twitter" />
+              </button>
+              <button class="red-button">
+                <img src="./images/pinterest-white.png" alt="pinterest" />
+              </button>
+              <button class="red-button">
+                <img src="./images/instagram-white.png" alt="instagram" />
+              </button>
+              </div> -->
             </div>
             <h3>MATTEW DIX</h3>
             <p>Graphic Design</p>
-          </a>
-          <a href="#" class="center">
+          </div>
+          <div class="center">
             <div class="member">
               <img
                 src="./images/christopher_cambell.jpg"
                 alt="christopher_cambell"
               />
-              <div>
-                <img src="images/share.png" alt="share" />
+              <div class="what">
+                <div class="container">
+                  <button>
+                    <img class="top-img"src="./images/facebook-white.png" alt="facebook" />
+                    <img src="./images/facebook-white.png" alt="facebook" />
+                    
+                  </button>
+                  <button>
+                    <img src="./images/twitter-pink.png" alt="twitter" />
+                    <img class="top-img" src="./images/twitter-white.png" alt="twitter" />
+                  </button>
+                  <button>
+                    <img src="./images/pinterest-pink.png" alt="pinterest" />
+                    <img class="top-img" src="./images/pinterest-white.png" alt="pinterest" />
+                  </button>
+                  <button>
+                    <img src="./images/instagram-pink.png" alt="instagram" />
+                    <img class="top-img" src="./images/instagram-white.png" alt="instagram" />
+                  </button>
+                </div>
               </div>
             </div>
+
             <h3>CHRISTOPHER CAMBELL</h3>
             <p>Branding/UX deign</p>
-          </a>
-          <a href="#" class="right">
+          </div>
+          <div class="right">
             <div class="member">
               <img src="./images/michael_fertig.jpg" alt="michael_fertig" />
-              <div>
-                <img src="images/share.png" alt="share" />
+
+              <div class="what">
+                <div class="container">
+                  <button>
+                    <img src="./images/facebook-white.png" alt="facebook" />
+                    <img class="top-img"src="./images/facebook-white.png" alt="facebook" />
+                  </button>
+                  <button>
+                    <img src="./images/twitter-pink.png" alt="twitter" />
+                    <img class="top-img" src="./images/twitter-white.png" alt="twitter" />
+                  </button>
+                  <button>
+                    <img src="./images/pinterest-pink.png" alt="pinterest" />
+                    <img class="top-img" src="./images/pinterest-white.png" alt="pinterest" />
+                  </button>
+                  <button>
+                    <img src="./images/instagram-pink.png" alt="instagram" />
+                    <img class="top-img" src="./images/instagram-white.png" alt="instagram" />
+                  </button>
+                </div>
               </div>
+              <!-- <div class="hover-on-hover">
+                <button class="red-button">
+                  <img src="./images/facebook-white.png" alt="facebook" />
+                </button>
+                <button class="red-button">
+                  <img src="./images/twitter-white.png" alt="twitter" />
+                </button>
+                <button class="red-button">
+                  <img src="./images/pinterest-white.png" alt="pinterest" />
+                </button>
+                <button class="red-button">
+                  <img src="./images/instagram-white.png" alt="instagram" />
+                </button>
+              </div> -->
             </div>
             <h3>MICHAEL FERTIG</h3>
             <p>Developer</p>
-          </a>
+          </div>
         </div>
       </div>
     </section>
@@ -355,13 +437,13 @@
     <section class="logos">
       <div class="wrapper">
         <div class="logo-images">
-        <img src="./images/logo1.png" alt="logo" />
-        <img src="./images/logo2.png" alt="logo" />
-        <img src="./images/logo3.png" alt="logo" />
-        <img src="./images/logo4.png" alt="logo" />
-        <img src="./images/logo5.png" alt="logo" />
-        <img src="./images/logo6.png" alt="logo" />
-      </div>
+          <img src="./images/logo1.png" alt="logo" />
+          <img src="./images/logo2.png" alt="logo" />
+          <img src="./images/logo3.png" alt="logo" />
+          <img src="./images/logo4.png" alt="logo" />
+          <img src="./images/logo5.png" alt="logo" />
+          <img src="./images/logo6.png" alt="logo" />
+        </div>
       </div>
     </section>
 
@@ -381,14 +463,13 @@
       <div class="first">
         <div class="left">
           <div class="top">
-            <!-- <div class="surf-image"></div> -->
             <img src="./images/surf.jpg" alt="surf" />
             <div class="overlay">
               <img src="./images/creatively.png" alt="photography" />
               <div class="text">
-              <h3>CREATIVELY DESIGNED</h3>
-              <h2>Lorem ipsum dolor sit</h2>
-            </div>
+                <h3>CREATIVELY DESIGNED</h3>
+                <h2>Lorem ipsum dolor sit</h2>
+              </div>
             </div>
           </div>
           <div class="bottom">
@@ -396,9 +477,9 @@
             <div class="overlay">
               <img src="./images/creatively.png" alt="photography" />
               <div class="text">
-              <h3>CREATIVELY DESIGNED</h3>
-              <h2>Lorem ipsum dolor sit</h2>
-            </div>
+                <h3>CREATIVELY DESIGNED</h3>
+                <h2>Lorem ipsum dolor sit</h2>
+              </div>
             </div>
           </div>
         </div>
@@ -406,12 +487,11 @@
           <div class="top">
             <img src="./images/architecture.jpg" alt="architecture" />
             <div class="overlay">
-              
               <img src="./images/creatively.png" alt="photography" />
               <div class="text">
-              <h3>CREATIVELY DESIGNED</h3>
-              <h2>Lorem ipsum dolor sit</h2>
-            </div>
+                <h3>CREATIVELY DESIGNED</h3>
+                <h2>Lorem ipsum dolor sit</h2>
+              </div>
             </div>
           </div>
           <div class="bottom">
@@ -419,9 +499,9 @@
             <div class="overlay">
               <img src="./images/creatively.png" alt="photography" />
               <div class="text">
-              <h3>CREATIVELY DESIGNED</h3>
-              <h2>Lorem ipsum dolor sit</h2>
-            </div>
+                <h3>CREATIVELY DESIGNED</h3>
+                <h2>Lorem ipsum dolor sit</h2>
+              </div>
             </div>
           </div>
         </div>
@@ -433,9 +513,9 @@
           <div class="overlay">
             <img src="./images/creatively.png" alt="photography" />
             <div class="text">
-            <h3>CREATIVELY DESIGNED</h3>
-            <h2>Lorem ipsum dolor sit</h2>
-          </div>
+              <h3>CREATIVELY DESIGNED</h3>
+              <h2>Lorem ipsum dolor sit</h2>
+            </div>
           </div>
         </div>
         <div class="right">
@@ -444,9 +524,9 @@
             <div class="overlay">
               <img src="./images/creatively.png" alt="photography" />
               <div class="text">
-              <h3>CREATIVELY DESIGNED</h3>
-              <h2>Lorem ipsum dolor sit</h2>
-            </div>
+                <h3>CREATIVELY DESIGNED</h3>
+                <h2>Lorem ipsum dolor sit</h2>
+              </div>
             </div>
           </div>
           <div class="bottom">
@@ -454,9 +534,9 @@
             <div class="overlay">
               <img src="./images/creatively.png" alt="photography" />
               <div class="text">
-              <h3>CREATIVELY DESIGNED</h3>
-              <h2>Lorem ipsum dolor sit</h2>
-            </div>
+                <h3>CREATIVELY DESIGNED</h3>
+                <h2>Lorem ipsum dolor sit</h2>
+              </div>
             </div>
           </div>
         </div>
@@ -661,8 +741,12 @@
           <div>
             <div>
               <h4>Follow Us:</h4>
-              <a href="#"><img src="images/facebook.png" alt="facebook" /></a>
-              <a href="#"><img src="images/twitter.png" alt="twitter" /></a>
+              <a href="#"
+                ><img src="./images/facebook (1).png" alt="facebook"
+              /></a>
+              <a href="#"
+                ><img src="images/twitter-green.png" alt="twitter"
+              /></a>
               <a href="#"><img src="images/instagram.png" alt="instagram" /></a>
               <a href="#"><img src="images/pinterest.png" alt="pinterest" /></a>
               <a href="#"
