--- a/index.html
+++ b/index.html
@@ -322,36 +322,48 @@
                 <div class="container">
                   <button>
                     <img src="./images/facebook-white.png" alt="facebook" />
-                    <img class="top-img"src="./images/facebook-white.png" alt="facebook" />
+                    <div class="top-div">
+                      <img
+                        class="top-img"
+                        src="./images/facebook-white.png"
+                        alt="facebook"
+                      />
+                    </div>
                   </button>
                   <button>
                     <img src="./images/twitter-pink.png" alt="twitter" />
-                    <img class="top-img" src="./images/twitter-white.png" alt="twitter" />
+                    <div class="top-div">
+                      <img
+                        class="top-img"
+                        src="./images/twitter-white.png"
+                        alt="twitter"
+                      />
+                    </div>
                   </button>
+
                   <button>
                     <img src="./images/pinterest-pink.png" alt="pinterest" />
-                    <img class="top-img" src="./images/pinterest-white.png" alt="pinterest" />
+                    <div class="top-div">
+                      <img
+                        class="top-img"
+                        src="./images/pinterest-white.png"
+                        alt="pinterest"
+                      />
+                    </div>
                   </button>
+
                   <button>
                     <img src="./images/instagram-pink.png" alt="instagram" />
-                    <img class="top-img" src="./images/instagram-white.png" alt="instagram" />
+                    <div class="top-div">
+                      <img
+                        class="top-img"
+                        src="./images/instagram-white.png"
+                        alt="instagram"
+                      />
+                    </div>
                   </button>
                 </div>
               </div>
-              <!-- <div class="hover-on-hover">
-                <button class="red-button">
-                <img src="./images/facebook-white.png" alt="facebook" />
-              </button>
-              <button class="red-button">
-                <img src="./images/twitter-white.png" alt="twitter" />
-              </button>
-              <button class="red-button">
-                <img src="./images/pinterest-white.png" alt="pinterest" />
-              </button>
-              <button class="red-button">
-                <img src="./images/instagram-white.png" alt="instagram" />
-              </button>
-              </div> -->
             </div>
             <h3>MATTEW DIX</h3>
             <p>Graphic Design</p>
@@ -365,21 +377,38 @@
               <div class="what">
                 <div class="container">
                   <button>
-                    <img class="top-img"src="./images/facebook-white.png" alt="facebook" />
                     <img src="./images/facebook-white.png" alt="facebook" />
-                    
+                    <div class="top-div">
+                     <img
+                    class="top-img"
+                    src="./images/facebook-white.png"
+                    alt="facebook"
+                  /></div>
                   </button>
                   <button>
                     <img src="./images/twitter-pink.png" alt="twitter" />
-                    <img class="top-img" src="./images/twitter-white.png" alt="twitter" />
+                    <div class="top-div">
+                      <img
+                        class="top-img"
+                        src="./images/twitter-white.png"
+                        alt="facebook"
+                      /></div>
                   </button>
                   <button>
                     <img src="./images/pinterest-pink.png" alt="pinterest" />
-                    <img class="top-img" src="./images/pinterest-white.png" alt="pinterest" />
+                    <div class="top-div"> <img
+                      class="top-img"
+                      src="./images/pinterest-white.png"
+                      alt="pinterest"
+                    /></div>
                   </button>
                   <button>
                     <img src="./images/instagram-pink.png" alt="instagram" />
-                    <img class="top-img" src="./images/instagram-white.png" alt="instagram" />
+                    <div class="top-div"> <img
+                      class="top-img"
+                      src="./images/instagram-white.png"
+                      alt="instagram"
+                    /></div>
                   </button>
                 </div>
               </div>
@@ -396,36 +425,40 @@
                 <div class="container">
                   <button>
                     <img src="./images/facebook-white.png" alt="facebook" />
-                    <img class="top-img"src="./images/facebook-white.png" alt="facebook" />
+                    <div class="top-div">
+                      <img
+                        class="top-img"
+                        src="./images/facebook-white.png"
+                        alt="facebook"
+                      />
                   </button>
                   <button>
                     <img src="./images/twitter-pink.png" alt="twitter" />
-                    <img class="top-img" src="./images/twitter-white.png" alt="twitter" />
+                     <div class="top-div">
+                      <img
+                      class="top-img"
+                      src="./images/twitter-white.png"
+                      alt="twitter"
+                    /></div>
                   </button>
                   <button>
                     <img src="./images/pinterest-pink.png" alt="pinterest" />
-                    <img class="top-img" src="./images/pinterest-white.png" alt="pinterest" />
+                    <div class="top-div"> <img
+                      class="top-img"
+                      src="./images/pinterest-white.png"
+                      alt="pinterest"
+                    /></div>
                   </button>
                   <button>
                     <img src="./images/instagram-pink.png" alt="instagram" />
-                    <img class="top-img" src="./images/instagram-white.png" alt="instagram" />
+                    <div class="top-div"> <img
+                      class="top-img"
+                      src="./images/instagram-white.png"
+                      alt="instagram"
+                    /></div>
                   </button>
                 </div>
               </div>
-              <!-- <div class="hover-on-hover">
-                <button class="red-button">
-                  <img src="./images/facebook-white.png" alt="facebook" />
-                </button>
-                <button class="red-button">
-                  <img src="./images/twitter-white.png" alt="twitter" />
-                </button>
-                <button class="red-button">
-                  <img src="./images/pinterest-white.png" alt="pinterest" />
-                </button>
-                <button class="red-button">
-                  <img src="./images/instagram-white.png" alt="instagram" />
-                </button>
-              </div> -->
             </div>
             <h3>MICHAEL FERTIG</h3>
             <p>Developer</p>
@@ -508,7 +541,6 @@
       </div>
       <div class="second">
         <div class="left-big">
-          <!-- <div class="big-image"></div> -->
           <img src="./images/sea.jpg" alt="sea" />
           <div class="overlay">
             <img src="./images/creatively.png" alt="photography" />
