--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class="wrapper">
         <h5>For all devices</h5>
         <h2>UNIQUE DESING</h2>
-        <div>
+        <div class="design-image">
           <img src="./images/phones.png" alt="phones" />
         </div>
       </div>
@@ -541,7 +541,7 @@
       </div>
       <div class="second">
         <div class="left-big">
-          <img src="./images/sea.jpg" alt="sea" />
+          <img src="./images/sea622.png" alt="sea" />
           <div class="overlay">
             <img src="./images/creatively.png" alt="photography" />
             <div class="text">
